--- a/app/views/guides/guide_03.html.erb
+++ b/app/views/guides/guide_03.html.erb
@@ -66,8 +66,10 @@
             <div class="inner">
               <h2><a href="Product_URL">Image_Title</a></h2>
               <strong>BY Product_Source</strong>
-              <em>$Reg_Price</em>
-              <p>$Current_Price (Percentage% OFF)</p>
+              <div class="pricing">
+                <em>$Reg_Price</em>
+                <p>$Current_Price (Percentage% OFF)</p>
+              </div>
               <div class="btn">
                 <a href="Product_URL">Check it Out on <span>Product_Source</span></a>
               </div>
@@ -123,8 +125,10 @@
             <div class="inner">
               <h2><a href="Product_URL">Image_Title</a></h2>
               <strong>BY Product_Source</strong>
-              <em>$Reg_Price</em>
-              <p>$Current_Price (Percentage% OFF)</p>
+              <div class="pricing">
+                <em>$Reg_Price</em>
+                <p>$Current_Price (Percentage% OFF)</p>
+              </div>
               <div class="btn">
                 <a href="Product_URL">Check it Out on <span>Product_Source</span></a>
               </div>
@@ -141,8 +145,10 @@
             <div class="inner">
               <h2><a href="Product_URL">Image_Title</a></h2>
               <strong>BY Product_Source</strong>
-              <em>$Reg_Price</em>
-              <p>$Current_Price (Percentage% OFF)</p>
+              <div class="pricing">
+                <em>$Reg_Price</em>
+                <p>$Current_Price (Percentage% OFF)</p>
+              </div>
               <div class="btn">
                 <a href="Product_URL">Check it Out on <span>Product_Source</span></a>
               </div>
