--- a/app/views/blogs/blackfridayinjuly.html.erb
+++ b/app/views/blogs/blackfridayinjuly.html.erb
@@ -21,6 +21,7 @@
            <li><a target="_blank" href="https://bit.ly/2xNVWu1">Forever 21</a><p>Up to 80% off select sale items. Vaild TBA</p></li>
            <li><a target="_blank" href="https://bit.ly/2XLhNBE">LORD + TAYLOR</a><p>Take 40% off clearance, plus an extra 20% off regular priced items with code SUMMER. Valid through 7/17.</p></li>
            <li><a target="_blank" href="https://bit.ly/2XpEiMg">OLD NAVY</a><p>Take up to 50% off site wide. Valid through 7/19.</p></li>
+           <p>We are constantly updating the list.... :D</p>
          </ul>
         </div>
 
