--- a/app/views/blogs/blackfridayinjuly.html.erb
+++ b/app/views/blogs/blackfridayinjuly.html.erb
@@ -23,6 +23,10 @@
            <li><a target="_blank" href="https://bit.ly/2XpEiMg">OLD NAVY</a><p>Take up to 50% off site wide. Valid through 7/19.</p></li>
            <p>We are constantly updating the list.... :D</p>
          </ul>
+         <div class="banner">
+           <a href="/deals/promo_codes">Today's Promo Codes</a>
+           <a href="/deals/bestdeals">Today's Daily Deals</a>
+         </div>
         </div>
 
       </div><!--./blog_body-->
