--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -54,6 +54,9 @@
   .codes .card_wrap .card .inner>p>a{line-height:1.4;height:2.8em;overflow:hidden;margin:10px 0;text-decoration:none;color:#616161;display:block;}
   .codes .card_wrap .card .inner>p>a>span{color:#08f;}
   .codes .card_wrap .card .inner>strong>a{color:#08f;}
+
+  .codes .card_wrap .card .inner>.prime_more>a{color:#08f;font-weight:bold;}
+
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;}
   .codes .card_wrap .card .inner>em>span{font-size:15px;color:#ccc;text-decoration:line-through;margin-left:5px;}
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
@@ -165,6 +168,9 @@
   .codes .card_wrap .card .deal_btn p{color:#ff3333;margin-top:10px;}
   .codes .rt_cnt .updating{font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;margin-bottom:100px;}
   .codes .rt_cnt .updating a{display:block;text-decoration:none;color:#fff;background:#000;padding:5px 10px;}
+
+
+  .codes .card_wrap .card .inner>.prime_more>a{color:#08f;font-weight:bold;}
 }
 
 @media screen and (max-width:400px){
