--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -46,6 +46,103 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="15" data-price="21.21">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2kg0cPL"><img src="https://m.media-amazon.com/images/I/51ptTO-KWXL._SR400,400_.jpg" alt="TreeActiv Cystic Acne Spot Treatment " /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>2,027 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2kg0cPL">TreeActiv Cystic Acne Spot Treatment | Best Extra Strength Fast Acting Formula for Clearing Severe Acne...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.21</span><span class="ori_price">$24.95</span>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <p><span>Take <strong>15% off at $24.95</strong> with promo code: <strong>15OX8LLR</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2kg0cPL">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="27.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2lNvpdH"><img src="https://m.media-amazon.com/images/I/51V0CENbbjL._SR400,400_.jpg" alt="JINRI 1875W Professional Salon Hair Dryer" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>559 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2lNvpdH">JINRI 1875W Professional Salon Hair Dryer Ionic Infrared Blow Hair Dryer With Diffuser & Concentrator Attachments for Curly Hair</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$27.00</span><span class="ori_price">$89.99</span></address>
+      <p><span>Take <strong>70% off at $89.99</strong> with promo code: <strong>70TV7CGN</strong></span></p>
+      <span class="ex_date">Expiration Date : Aug 05, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2lNvpdH">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="8.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2lk19aa"><img src="https://m.media-amazon.com/images/I/81WE+OQmkAL._SR400,400_.jpg" alt="100% Pure Rosehip Seed Oil For Face" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>29 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2lk19aa">100% Pure Rosehip Seed Oil For Face, Nails, Hair and Skin- 100% Pure & Natural Certified Organic...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.49</span><span class="ori_price">$16.99</span></address>
+      <p><span>Take <strong>50% off at $16.99</strong> with promo code: <strong>503RADM1</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 16, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2lk19aa">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="11.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2kg1Fpo"><img src="https://m.media-amazon.com/images/I/61v6C3YTDFL._SR400,400_.jpg" alt="V Line Mask Double chin mask" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>40 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2kg1Fpo">V Line Mask Double chin mask(5PCS), Neck Mask Face Lift V Lifting Chin Up Patch Double Chin Reducer Neck Lift,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.49</span><span class="ori_price">$22.99</span></address>
+      <p><span>Take <strong>50% off at $22.99</strong> with promo code: <strong>50HHIH2V</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2kg1Fpo">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="6.80">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2lOhX9t"><img src="https://m.media-amazon.com/images/I/61by07ga1RL._SR400,400_.jpg" alt="Running Headphones Over Ear Sport Earphones" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>128 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2lOhX9t">Running Headphones Over Ear Sport Earphones with MIc HD Stereo Sweatproof Earbuds with Bass for Gym Sports Workout Headsets(blue)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.80</span><span class="ori_price">$16.99</span></address>
+      <p><span>Take <strong>60% off at $16.99</strong> with promo code: <strong>60RUG37M</strong></span></p>
+      <span class="ex_date">Expiration Date : Aug 09, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2lOhX9t">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="60" data-price="8.00">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2ls0gMy"><img src="https://m.media-amazon.com/images/I/71GO6fzDJpL._SR400,400_.jpg" alt="WANNEW Yoga Pants" /></a>
