--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -224,7 +224,7 @@
 .guide_header h2{font-size:35px;width:50%;line-height:1.3;border-top:2px solid;border-bottom:2px solid;padding:10px 0;font-weight:900;}
 .guide_header h2.pink{color:pink;}
 .guide_show_header{width:1000px;margin:100px auto 0 auto;}
-.guide_show{font-family: 'Montserrat', sans-serif;width:1000px;margin:auto;}
+.guide_show{font-family: 'Montserrat', sans-serif;width:1000px;margin:0 auto 100px auto;}
 .shoes_wrap{margin-top:35px;}
 .guide_show .group:before,
 .guide_show .group:after{content:'';display:block;}
@@ -283,8 +283,8 @@
   .guide_show_header{width:100%;}
   .guide_show{width:100%;}
   .guide_show .flex{display:block;align-items:center;justify-content:center;}
-  .guide_show .column_box .last_box{border:none;}
-  .guide_show .column{width:48%;border:none;padding:0;margin:1%;box-shadow:0 4px 11px 0 rgba(221,221,221,.5);}
+  .guide_show .column_box .last_box, .guide_show .last_column_box .column{border:none;}
+  .guide_show .column{width:48%;border:none;padding:0;margin:0 1% 25px 1%;box-shadow:0 4px 11px 0 rgba(221,221,221,.5);}
   .guide_show .column:hover{box-shadow: 0 0 0;}
   .guide_show .column img{height:175px;object-fit:contain;border-radius:10px;}
   .guide_show .shoes_column img{object-fit:contain;}
