--- a/app/views/guides/guide_02.html.erb
+++ b/app/views/guides/guide_02.html.erb
@@ -36,17 +36,47 @@
       </div> -->
 
       <div class="column_box last_column_box">
-        <div class="flex column" onclick="currentSlide(Page_Number)">
-          <img src="Image_URL">
+        <div class="flex column" onclick="currentSlide(1)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/61hFt1U36oL._SX679_.jpg">
         </div>
-        <div class="flex column" onclick="currentSlide(Page_Number)">
-          <img src="Image_URL">
+        <div class="flex column" onclick="currentSlide(2)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/81WHPKz8CkL._SX679_.jpg">
         </div>
-        <div class="flex column" onclick="currentSlide(Page_Number)">
-          <img src="Image_URL">
+        <div class="flex column" onclick="currentSlide(3)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/71JJABexT7L._SX679_.jpg">
         </div>
-        <div class="flex column last_box" onclick="currentSlide(Page_Number)">
-          <img src="Image_URL">
+        <div class="flex column last_box" onclick="currentSlide(4)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/81Ya3gBgyGL._SX522_.jpg">
+        </div>
+      </div>
+
+      <div class="column_box last_column_box">
+        <div class="flex column" onclick="currentSlide(5)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/61iLvSIIIqL._SX679_.jpg">
+        </div>
+        <div class="flex column" onclick="currentSlide(6)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/71MwCSouiOL._SX679_.jpg">
+        </div>
+        <div class="flex column" onclick="currentSlide(7)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/719Bp1G7EzL._SY500_.jpg">
+        </div>
+        <div class="flex column last_box" onclick="currentSlide(8)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/51YPHbnxfjL.jpg">
+        </div>
+      </div>
+
+      <div class="column_box last_column_box">
+        <div class="flex column" onclick="currentSlide(9)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/81WR58-w2AL._UX679_.jpg">
+        </div>
+        <div class="flex column" onclick="currentSlide(10)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/61-78oUuhgL._SX679_.jpg">
+        </div>
+        <div class="flex column" onclick="currentSlide(11)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/41s1F1DAnqL.jpg">
+        </div>
+        <div class="flex column last_box" onclick="currentSlide(12)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/51xfN70MYZL._SX679_.jpg">
         </div>
       </div>
 
@@ -60,89 +90,162 @@
         <!-- <div class="flex slides clearfix">
           <div class="numbering">Current_Page / Total_Page</div>
           <div class="inner_wrap">
-            <div class="img_box">
-             <a target="_blank" href="Product_URL"><img src="Image_URL"></a>
-            </div>
+            <div class="img_box"><a target="_blank" href="Product_URL"><img src="Image_URL" alt=""></a></div>
             <div class="inner">
               <h2><a href="Product_URL">Image_Title</a></h2>
-              <strong>BY Product_Source</strong>
-              <em>$Reg_Price</em>
-              <p>$Current_Price (Percentage% OFF)</p>
-              <div class="btn">
-                <a href="Product_URL">Check it Out on <span>Product_Source</span></a>
-              </div>
+              <strong>BY Product_Source</strong><div class="pricing"><em>$Reg_Price</em><p>$Current_Price (Percentage% OFF)</p></div>
+              <div class="btn"><a href="Product_URL">Check it Out on <span>Product_Source</span></a></div>
             </div>
           </div>
         </div> -->
 
         <div class="flex slides clearfix">
-          <div class="numbering">Current_Page / Total_Page</div>
+          <div class="numbering">1 / Total_Page</div>
           <div class="inner_wrap">
             <div class="img_box">
-             <a target="_blank" href="Product_URL"><img src="Image_URL"></a>
+             <a target="_blank" href="https://amzn.to/2lG4m3W"><img src="https://images-na.ssl-images-amazon.com/images/I/61hFt1U36oL._SX679_.jpg"></a>
             </div>
             <div class="inner">
-              <h2><a href="Product_URL">Image_Title</a></h2>
-              <strong>BY Product_Source</strong>
-              <em>$Reg_Price</em>
-              <p>$Current_Price (Percentage% OFF)</p>
+              <h2><a href="https://amzn.to/2lG4m3W">DC Batman Kitchen Timer - Bat Signal Lights Up When Done - Cook Like a Super Hero</a></h2>
+              <strong>BY Seven20</strong>
+              <div class="pricing">
+                <p>$19.99</p>
+              </div>
               <div class="btn">
-                <a href="Product_URL">Check it Out on <span>Product_Source</span></a>
+                <a href="https://amzn.to/2lG4m3W">Check it Out on <span>Amazon</span></a>
               </div>
             </div>
           </div>
         </div>
 
         <div class="flex slides clearfix">
-          <div class="numbering">Current_Page / Total_Page</div>
+          <div class="numbering">2 / Total_Page</div>
           <div class="inner_wrap">
-            <div class="img_box">
-             <a target="_blank" href="Product_URL"><img src="Image_URL"></a>
-            </div>
+            <div class="img_box"><a target="_blank" href="https://amzn.to/2lES5N9"><img src="https://images-na.ssl-images-amazon.com/images/I/81WHPKz8CkL._SX679_.jpg" alt="DC Batman 2-Slice Toaster"></a></div>
             <div class="inner">
-              <h2><a href="Product_URL">Image_Title</a></h2>
-              <strong>BY Product_Source</strong>
-              <em>$Reg_Price</em>
-              <p>$Current_Price (Percentage% OFF)</p>
-              <div class="btn">
-                <a href="Product_URL">Check it Out on <span>Product_Source</span></a>
-              </div>
+              <h2><a href="https://amzn.to/2lES5N9">DC Batman 2-Slice Toaster</a></h2>
+              <strong>BY DC Batman</strong><div class="pricing"><p>$19.99</p></div>
+              <div class="btn"><a href="https://amzn.to/2lES5N9">Check it Out on <span>Amazon</span></a></div>
             </div>
           </div>
         </div>
 
         <div class="flex slides clearfix">
-          <div class="numbering">Current_Page / Total_Page</div>
+          <div class="numbering">3 / Total_Page</div>
           <div class="inner_wrap">
-            <div class="img_box">
-             <a target="_blank" href="Product_URL"><img src="Image_URL"></a>
-            </div>
+            <div class="img_box"><a target="_blank" href="https://amzn.to/2lGY8kn"><img src="https://images-na.ssl-images-amazon.com/images/I/71JJABexT7L._SX679_.jpg" alt="Zak Designs DC Comics Batman"></a></div>
             <div class="inner">
-              <h2><a href="Product_URL">Image_Title</a></h2>
-              <strong>BY Product_Source</strong>
-              <em>$Reg_Price</em>
-              <p>$Current_Price (Percentage% OFF)</p>
-              <div class="btn">
-                <a href="Product_URL">Check it Out on <span>Product_Source</span></a>
-              </div>
+              <h2><a href="https://amzn.to/2lGY8kn">Zak Designs DC Comics Batman - Vacuum Insulated Stainless Steel - Lynden Wrap Tumbler - 28 oz.</a></h2>
+              <strong>BY Zak Designs</strong><div class="pricing"><p>$26.99</p></div>
+              <div class="btn"><a href="https://amzn.to/2lGY8kn">Check it Out on <span>Amazon</span></a></div>
             </div>
           </div>
         </div>
 
         <div class="flex slides clearfix">
-          <div class="numbering">Current_Page / Total_Page</div>
+          <div class="numbering">4 / Total_Page</div>
           <div class="inner_wrap">
-            <div class="img_box">
-             <a target="_blank" href="Product_URL"><img src="Image_URL"></a>
-            </div>
+            <div class="img_box"><a target="_blank" href="https://amzn.to/2kayc03"><img src="https://images-na.ssl-images-amazon.com/images/I/81Ya3gBgyGL._SX522_.jpg" alt="Zak Designs DC Comics Batman"></a></div>
             <div class="inner">
-              <h2><a href="Product_URL">Image_Title</a></h2>
-              <strong>BY Product_Source</strong>
-              <em>$Reg_Price</em>
-              <p>$Current_Price (Percentage% OFF)</p>
-              <div class="btn">
-                <a href="Product_URL">Check it Out on <span>Product_Source</span></a>
-              </div>
+              <h2><a href="https://amzn.to/2kayc03">DC Comics Batman - Kids Dinnerware Set, Including 10" Melamine Plate and 27 Ounce Bowl Set</a></h2>
+              <strong>BY Zak Designs</strong><div class="pricing"><p>$12.99</p></div>
+              <div class="btn"><a href="https://amzn.to/2kayc03">Check it Out on <span>Amazon</span></a></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex slides clearfix">
+          <div class="numbering">5 / Total_Page</div>
+          <div class="inner_wrap">
+            <div class="img_box"><a target="_blank" href="https://amzn.to/2k7lGhN"><img src="https://images-na.ssl-images-amazon.com/images/I/61iLvSIIIqL._SX679_.jpg" alt=""></a></div>
+            <div class="inner">
+              <h2><a href="https://amzn.to/2k7lGhN">Eco-Friendly Batman Vinyl Wall Clock</a></h2>
+              <strong>BY Secondlifeforvinyl</strong><div class="pricing"><p>$29.50</p></div>
+              <div class="btn"><a href="https://amzn.to/2k7lGhN">Check it Out on <span>Amazon</span></a></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex slides clearfix">
+          <div class="numbering">6 / Total_Page</div>
+          <div class="inner_wrap">
+            <div class="img_box"><a target="_blank" href="https://amzn.to/2k7sv2V"><img src="https://images-na.ssl-images-amazon.com/images/I/71MwCSouiOL._SX679_.jpg" alt="Batman Vinyl Record Wall Clock"></a></div>
+            <div class="inner">
+              <h2><a href="https://amzn.to/2k7sv2V">Batman Vinyl Record Wall Clock</a></h2>
+              <strong>BY BorschToday </strong><div class="pricing"><p>$35.00</p></div>
+              <div class="btn"><a href="https://amzn.to/2k7sv2V">Check it Out on <span>Amazon</span></a></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex slides clearfix">
+          <div class="numbering">7 / Total_Page</div>
+          <div class="inner_wrap">
+            <div class="img_box"><a target="_blank" href="https://amzn.to/2lvpF88"><img src="https://images-na.ssl-images-amazon.com/images/I/719Bp1G7EzL._SY500_.jpg" alt="Batman Vinyl Record Wall Clock"></a></div>
+            <div class="inner">
+              <h2><a href="https://amzn.to/2lvpF88">Batman and Catwoman Superheroes HANDMADE Vinyl Record Wall Clock</a></h2>
+              <strong>BY Borsch Today</strong><div class="pricing"><p>$38.80</p></div>
+              <div class="btn"><a href="https://amzn.to/2lvpF88">Check it Out on <span>Amazon</span></a></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex slides clearfix">
+          <div class="numbering">8 / Total_Page</div>
+          <div class="inner_wrap">
+            <div class="img_box"><a target="_blank" href="https://amzn.to/2lF5JQn"><img src="https://images-na.ssl-images-amazon.com/images/I/51YPHbnxfjL.jpg" alt="Batman, Gotham City"></a></div>
+            <div class="inner">
+              <h2><a href="https://amzn.to/2lF5JQn">Batman, Gotham City, Vinyl wall Clock, Batman Returns, Dark Knight, 2018, Arkham Knight, Home Decor, Vinyl Record...</a></h2>
+              <strong>BY LBDK</strong><div class="pricing"><p>$34.93</p></div>
+              <div class="btn"><a href="https://amzn.to/2lF5JQn">Check it Out on <span>Amazon</span></a></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex slides clearfix">
+          <div class="numbering">9 / Total_Page</div>
+          <div class="inner_wrap">
+            <div class="img_box"><a target="_blank" href="https://amzn.to/2k7uioF"><img src="https://images-na.ssl-images-amazon.com/images/I/81WR58-w2AL._UX679_.jpg" alt="Batman Rain Jacket"></a></div>
+            <div class="inner">
+              <h2><a href="https://amzn.to/2k7uioF">Kids' D.c. Comics Character Lined Rain Jacket</a></h2>
+              <strong>BY Western Chief</strong><div class="pricing"><p>$49.88</p></div>
+              <div class="btn"><a href="https://amzn.to/2k7uioF">Check it Out on <span>Amazon</span></a></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex slides clearfix">
+          <div class="numbering">10 / Total_Page</div>
+          <div class="inner_wrap">
+            <div class="img_box"><a target="_blank" href="https://amzn.to/2lHcJMH"><img src="https://images-na.ssl-images-amazon.com/images/I/61-78oUuhgL._SX679_.jpg" alt="Batman 100% Cotton Bedding Sheet Set"></a></div>
+            <div class="inner">
+              <h2><a href="https://amzn.to/2lHcJMH">Batman 100% Cotton Bedding Sheet Set【Free Express Shipping】 Single Queen King Size 3 and 4 Pieces Cool DC (Single Size)</a></h2>
+              <strong>BY Peachy Baby</strong><div class="pricing"><p>$109.99</p></div>
+              <div class="btn"><a href="https://amzn.to/2lHcJMH">Check it Out on <span>Amazon</span></a></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex slides clearfix">
+          <div class="numbering">11 / Total_Page</div>
+          <div class="inner_wrap">
+            <div class="img_box"><a target="_blank" href="https://amzn.to/2kaD8lB"><img src="https://images-na.ssl-images-amazon.com/images/I/41s1F1DAnqL.jpg" alt="Batman Logo Mini Plastic Party Cup Set"></a></div>
+            <div class="inner">
+              <h2><a href="https://amzn.to/2kaD8lB">Batman Logo Mini Plastic Party Cup Set, 2-Ounce, 20 Piece, black</a></h2>
+              <strong>BY DC Comics</strong><div class="pricing"><p>$4.99</p></div>
+              <div class="btn"><a href="https://amzn.to/2kaD8lB">Check it Out on <span>Amazon</span></a></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex slides clearfix">
+          <div class="numbering">12 / Total_Page</div>
+          <div class="inner_wrap">
+            <div class="img_box"><a target="_blank" href="https://amzn.to/2lFF85M"><img src="https://images-na.ssl-images-amazon.com/images/I/51xfN70MYZL._SX679_.jpg" alt="DC Comics Batman Funtainer Thermos"></a></div>
+            <div class="inner">
+              <h2><a href="https://amzn.to/2lFF85M">DC Comics Batman Funtainer Thermos Bottle & Food Jar</a></h2>
+              <strong>BY Thermos</strong><div class="pricing"><p>$39.00</p></div>
+              <div class="btn"><a href="https://amzn.to/2lFF85M">Check it Out on <span>Amazon</span></a></div>
             </div>
           </div>
         </div>
