--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -30,8 +30,8 @@
 
       </div>
 
-      <!-- <div class="show_box_down clearfix">
-        <h2>RELATED</h2>
+      <div class="show_box_down clearfix">
+        <h2>You may also like...</h2>
         <% @relative_sub_category.shuffle.take(4).each do |subcategory| %>
           <% if subcategory.subcategory_id == @gadget.subcategory_id %>
             <div class="sbd_box">
@@ -44,7 +44,7 @@
           <% end %>
         <% end %>
       </div> 
-    </div> -->
+    </div>
     
   </div>
 </div>
