--- a/app/views/guides/_navbar.html.erb
+++ b/app/views/guides/_navbar.html.erb
@@ -6,7 +6,7 @@
       <button class="filter-button btn btn-md btn-primary" data-filter="*">All</button>
       <button class="filter-button btn btn-md red white-text" data-filter="color">Color</button>
       <button class="filter-button btn btn-md orange" data-filter="characters">Characters</button>
-      <button class="filter-button btn btn-md yellow" data-filter="dad">Dad</button>
+      <button class="filter-button btn btn-md yellow" data-filter="special">Special Day</button>
       <button class="filter-button btn btn-md blue white-text" data-filter="mom">Mom</button>
       <button class="filter-button btn btn-md green white-text" data-filter="friend">Friend</button>
       <input type="text" class="form-control" placeholder="Search gift you want to">
@@ -19,7 +19,7 @@
       <button class="filter-button btn btn-md btn-primary" data-filter="*">All</button>
       <button class="filter-button btn btn-md red white-text" data-filter="color">Color</button>
       <button class="filter-button btn btn-md orange" data-filter="characters">Characters</button>
-      <button class="filter-button btn btn-md yellow" data-filter="dad">Dad</button>
+      <button class="filter-button btn btn-md yellow" data-filter="special">Special Day</button>
       <button class="filter-button btn btn-md blue white-text" data-filter="mom">Mom</button>
       <button class="filter-button btn btn-md green white-text" data-filter="friend">Friend</button>
       <!-- <input type="text" class="form-control" placeholder="Search gift you want to"> -->
