--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -318,7 +318,7 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2y1pEvX">Use Code at Amazon</a></div>
 </div>
 
-<div class="card clearfix" data-score="75" data-price="discounted_price">
+<div class="card clearfix" data-score="75" data-price="17.50">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2XVGk26"><img src="https://m.media-amazon.com/images/I/41WCKHW8QiL._SR400,400_.jpg" alt="Anti-Theft Travel Laptop Backpack" /></a>
     <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>2 Amazon Reviews</p></div>
@@ -328,7 +328,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2XVGk26">Anti-Theft Travel Laptop Backpack, Business Computer Bags Waterproof Lightweight with USB Charging Port Travel Backpack...</a></p>
     <div class="code_high">
-      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$69.99</span></address>
+      <address><span class="dis_price">$17.50</span><span class="ori_price">$69.99</span></address>
       <p><span>Take <strong>75% off at $69.99</strong> with promo code: <strong>75H437GG</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span>
       <%= render 'deals/notes' %>
