--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -74,7 +74,8 @@
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange>.tooltip-content{visibility:hidden;width:400px;background:#e47911;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange:hover>.tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high>em{font-size:12px;color:#616161;display:block;}
-  .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;}
+  .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;/*border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;*/}
+  .codes .card_wrap .card .inner>.code_high>.mobile_code{display:none;}
   .codes .card_wrap .card .inner>.code_high>p>span{position:relative;top:0.4em;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;font-weight:500;}
   .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#000;margin-bottom:3px;}
@@ -151,7 +152,8 @@
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange>.tooltip-content{visibility:hidden;width:400px;background:#e47911;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange:hover>.tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high>em{font-size:13px;color:#616161;display:block;margin-top:3px;}
-  .codes .card_wrap .card .inner>.code_high>p{display:inline;border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;}
+  .codes .card_wrap .card .inner>.code_high>p{display:inline;/*border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;*/}
+  .codes .card_wrap .card .inner>.code_high>.mobile_code{display:block;margin-bottom:10px;}
   .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;font-weight:500;}
   .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#616161;}
@@ -186,6 +188,7 @@
   .codes .lt_cnt .bestdeals>ul>li>a{text-decoration:none;color:#000;display:block;background:#fff;}
   .codes .lt_cnt .lt_sort_box.on{display:none;}
   .codes .rt_cnt .sort_box ul li{float:left;width:17.7%;margin:1%;}
+  .codes .card_wrap .card .inner>.code_high>.mobile_code{display:block;margin-bottom:13px;}
 }
 
 /* Section Coupons */
