--- a/app/views/deals/_body_amz_prime.html.erb
+++ b/app/views/deals/_body_amz_prime.html.erb
@@ -29,7 +29,7 @@
     <div class="code_high">
       <address><span class="dis_price">$74.25</span><span class="ori_price">$99.00</span></address>
       <textarea readonly="readonly" class="code_area">20OKUSBCABLE</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>40% off at $19.99</strong> with promo code: <strong>40DEWSUB</strong></span></p>
+      <p class="mobile_code"><span>Take <strong>40% off at $19.99</strong> with promo code: <strong class="m_codes">40DEWSUB</strong></span></p>
       <span class="ex_date ex_date_new">Expiration Date : Jul 16, 2019 at 11:59 PM PDT</span>
       <%= render 'deals/notes' %>
     </div>
