--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -156,7 +156,7 @@
   .codes .card_wrap .card .inner>.code_high>.mobile_code{display:block;margin-bottom:10px;}
   .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;font-weight:500;}
-  .codes .card_wrap .card .inner>.code_high>p>span>.m_codes{font-size:25px;background:#000;color:#fff;padding:5px 10px;}
+  .codes .card_wrap .card .inner>.code_high>p>span>.m_codes{background:#000;color:#fff;padding:5px 10px;border-radius:10px;line-height:38px;}
   .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#616161;}
   .codes .card_wrap .card .inner>.code_high>ul{}
   .codes .card_wrap .card .inner>.code_high>ul>li{margin-bottom:10px;}
@@ -190,6 +190,7 @@
   .codes .lt_cnt .lt_sort_box.on{display:none;}
   .codes .rt_cnt .sort_box ul li{float:left;width:17.7%;margin:1%;}
   .codes .card_wrap .card .inner>.code_high>.mobile_code{display:block;margin-bottom:13px;}
+  .codes .card_wrap .card .inner>.code_high>p>span>.m_codes{background:#000;color:#fff;padding:5px 10px;border-radius:10px;line-height:38px;}
 }
 
 /* Section Coupons */
