--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -30,6 +30,7 @@
     <div class="code_high">
       <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Origianl_price</span></address>
       <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>percentage% off at $Origianl_price</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p>
       <span class="ex_date ex_date_new">Expiration Date : End_date</span>
       <%= render 'deals/notes' %>
     </div>
@@ -45,6 +46,105 @@
 
  <p>run out of stock soon</p>
 -->
+<div class="card clearfix" data-score="50" data-price="18.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y6668d"><img src="https://m.media-amazon.com/images/I/81xIETKKjDL._SR400,400_.jpg" alt="Ulgoo Girls School Bags" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>46 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y6668d">Ulgoo Girls School Bags Unicorn Kids Bookbags Teens Bookbag Set Kids Laptop Backpack Lunch Box Purse (Rainbow White)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.50</span><span class="ori_price">$36.99</span></address>
+      <p><span>Take <strong>50% off at $36.99</strong> with promo code: <strong>50XYLZ7K</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 24, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Y6668d">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="75" data-price="17.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/32vbbpY"><img src="https://m.media-amazon.com/images/I/71NYyiNh+6L._SR400,400_.jpg" alt="Women Anti-Theft Backpack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>3 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>75% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/32vbbpY">Women Anti-Theft Backpack Purse PU Leather Fashion Travel Casual Detachable Covertible Ladies Shoulder Bag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.50</span><span class="ori_price">$69.99</span></address>
+      <p><span>Take <strong>75% off at $69.99</strong> with promo code: <strong>75PQLI94</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/32vbbpY">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="discounted_price">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XT3E5P"><img src="https://m.media-amazon.com/images/I/712h--Z0tZL._SR400,400_.jpg" alt="Canvas Leather Weekender/Overnight Travel Duffel Bag" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>51 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XT3E5P">Canvas Leather Weekender/Overnight Travel Duffel Bag (Coffee)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$36.99</span></address>
+      <p><span>Take <strong>50% off at $36.99</strong> with promo code: <strong>50MVMIV1</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 24, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2XT3E5P">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="20.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/32vwnMz"><img src="https://m.media-amazon.com/images/I/6129y4c4pZL._SR400,400_.jpg" alt="Sling Bag" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>180 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/32vwnMz">Sling Bag,Crossbody Backpack Rope Shoulder Bag Waterproof RFID Canvas Travel Multipurpose Daypack With USB Charging Port for Men Women</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.99</span><span class="ori_price">$29.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <p><span>Take <strong>30% off at $29.99</strong> with promo code: <strong>304NXGW9</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 17, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/32vwnMz">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="36.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Sn9Nkl"><img src="https://m.media-amazon.com/images/I/41R5oHghEyL._SR400,400_.jpg" alt="LATME Sunrise Alarm Clock" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>97 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Sn9Nkl">LATME Sunrise Alarm Clock Wake Up Light Works with Alexa Google Home with Colored Sunrise Simulation and Sunset Fading Night ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$36.79</span><span class="ori_price">$45.99</span>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <p><span>Take <strong>20% off at $45.99</strong> with promo code: <strong>20L3VC2M</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 17, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Sn9Nkl">Use Code at Amazon</a></div>
+</div>
 
 <div class="card clearfix" data-score="40" data-price="11.99">
   <div class="image_box">
